--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@
   }
   .card{ 
     background-color: white;
-    display:flex; 
+    height: 20px;
+    display: flex; 
     font : 400 1em "Rubik";
     align-content: center;
     justify-content: center;
@@ -72,6 +73,7 @@
 
   input[type="button"]{
     width:60px;
+    height:20px;
     font : 300 1em "Poppins";
     border : 0px solid black;
   }
